--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.0'
     implementation 'com.android.support:support-v4:27.0.0'
     implementation 'com.android.support:design:27.0.0'
+    implementation 'com.android.support:cardview-v7:27.0.0'
 }
