--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,10 @@
-# Project-wide Gradle settings.
+org.gradle.jvmargs=-Xmx5120m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+RELEASE_STORE_PASSWORD=21@dip@82
+RELEASE_STORE_FILE=finalKeystore.jks
+RELEASE_KEY_ALIAS=releaseKey
+RELEASE_KEY_PASSWORD=21@dip@82
 
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
-
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+DEBUG_STORE_PASSWORD=android
+DEBUG_STORE_FILE=debug.keystore
+DEBUG_KEY_ALIAS=androiddebugkey
+DEBUG_KEY_PASSWORD=android
