--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".views.activities.CategorySearchResultActivity">
+            <intent-filter>
+                <action android:name="com.nds.pmc.action.search_category"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
