resolved permission issue and app crash

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".views.activities.CategorySearchResultActivity">
             <intent-filter>
                 <action android:name="com.nds.pmc.action.search_category"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
     </application>
