--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ RELEASE_STORE_PASSWORD=21@dip@82
 RELEASE_STORE_FILE=finalKeystore.jks
 RELEASE_KEY_ALIAS=releaseKey
 RELEASE_KEY_PASSWORD=21@dip@82
-
+android.enableAapt2=false
 DEBUG_STORE_PASSWORD=android
 DEBUG_STORE_FILE=debug.keystore
 DEBUG_KEY_ALIAS=androiddebugkey
