--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,15 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            debuggable false
+            minifyEnabled true
+            multiDexEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            debuggable true
+            minifyEnabled false
+            multiDexEnabled true
         }
     }
     signingConfigs {
@@ -48,6 +55,7 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    implementation "com.android.support:multidex:1.0.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'im.amomo.volley:okvolley:1.1.8'
     implementation 'com.android.support:appcompat-v7:27.0.0'
