--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-                                                                                                                        <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <application
         android:name=".PMCApplication"
@@ -25,27 +25,29 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-        <!--<meta-data-->
-            <!--android:name="com.google.android.maps.v2.API_KEY"-->
-            <!--android:value="@string/MAPS_API_KEY"/>-->
 
-
-        <activity android:name=".views.activities.LauncherActivity">
+        <activity android:name=".views.activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".views.activities.LauncherActivity">
+            <intent-filter>
+                <action android:name="com.nds.pmc.action.launch_pmc" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity android:name=".views.activities.CategorySearchResultActivity">
             <intent-filter>
-                <action android:name="com.nds.pmc.action.search_category"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="com.nds.pmc.action.search_category" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity android:name=".views.activities.CategorySearchDetailActivity">
             <intent-filter>
-                <action android:name="com.nds.pmc.action.search_result_details"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="com.nds.pmc.action.search_result_details" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
