--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <provider android:name=".dbo.PlaceContentProvider"
+            android:authorities="com.nds.pmc.pmcprovider"
+            android:exported="false"/>
     </application>
 
 </manifest>
