--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -51,9 +52,25 @@
             </intent-filter>
         </activity>
 
-        <provider android:name=".dbo.PlaceContentProvider"
+        <provider
+            android:name=".dbo.PlaceContentProvider"
             android:authorities="com.nds.pmc.pmcprovider"
-            android:exported="false"/>
+            android:exported="false" />
+
+
+        <receiver android:name=".providers.PMCWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/pmc_widget_provider" />
+        </receiver>
+
+        <service
+            android:name=".services.PlaceRemoteViewService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"></service>
+        <service android:name=".services.PMCWidgetService" />
     </application>
 
 </manifest>
