--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.0.0'
     implementation 'com.google.code.gson:gson:2.2.4'
     implementation 'com.google.android.gms:play-services:11.6.2'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
