adding unit test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ android {
             storePassword ''
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
