--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nds.pmc">
 
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -33,7 +34,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.activities.LauncherActivity">
+        <activity android:name=".views.activities.HomeActivity">
             <intent-filter>
                 <action android:name="com.nds.pmc.action.launch_pmc" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -52,6 +53,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".views.activities.TestActivity"/>
         <provider
             android:name=".dbo.PlaceContentProvider"
             android:authorities="com.nds.pmc.pmcprovider"
