app signing & map api key changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,8 @@
 org.gradle.jvmargs=-Xmx5120m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-RELEASE_STORE_PASSWORD=21@dip@82
-RELEASE_STORE_FILE=finalKeystore.jks
+RELEASE_STORE_PASSWORD=picrelease
+RELEASE_STORE_FILE=release.keystore.jks
 RELEASE_KEY_ALIAS=releaseKey
-RELEASE_KEY_PASSWORD=21@dip@82
+RELEASE_KEY_PASSWORD=picrelease
 android.enableAapt2=false
-DEBUG_STORE_PASSWORD=android
-DEBUG_STORE_FILE=debug.keystore
-DEBUG_KEY_ALIAS=androiddebugkey
-DEBUG_KEY_PASSWORD=android
+RELEASE_API_KEY=AIzaSyAdHrxvrvMAp6oV5OMfrCXvaqfdNbjEDRQ
+DEBUG_API_KEY=AIzaSyAdHrxvrvMAp6oV5OMfrCXvaqfdNbjEDRQ
