--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,26 +15,8 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-    buildTypes {
-        release {
-            debuggable false
-            minifyEnabled true
-            multiDexEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-        debug {
-            debuggable true
-            minifyEnabled false
-            multiDexEnabled true
-        }
-    }
+    
     signingConfigs {
-        debugConfig {
-            storeFile file(DEBUG_STORE_FILE)
-            keyAlias DEBUG_KEY_ALIAS
-            keyPassword DEBUG_KEY_PASSWORD
-            storePassword DEBUG_STORE_PASSWORD
-        }
         releaseConfig {
             keyAlias RELEASE_KEY_ALIAS
             keyPassword RELEASE_KEY_PASSWORD
@@ -45,6 +27,23 @@ android {
             keyAlias ''
             keyPassword ''
             storePassword ''
+        }
+    }
+	buildTypes {
+        release {
+            debuggable false
+            minifyEnabled true
+            multiDexEnabled true
+            shrinkResources true
+            resValue "string", "PLACES_API_KEY", RELEASE_API_KEY
+            signingConfig signingConfigs.releaseConfig
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            debuggable true
+            minifyEnabled false
+            multiDexEnabled true
+            resValue "string", "PLACES_API_KEY", DEBUG_API_KEY
         }
     }
     compileOptions {
@@ -59,7 +58,7 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation "com.android.support:multidex:1.0.2"
+    compileOnly "com.android.support:multidex:1.0.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'im.amomo.volley:okvolley:1.1.8'
     implementation 'com.android.support:appcompat-v7:27.0.0'
