--- a/temp.gradle.properties
+++ b/temp.gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx5120m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-RELEASE_STORE_PASSWORD=
-RELEASE_STORE_FILE=
-RELEASE_KEY_ALIAS=
-RELEASE_KEY_PASSWORD=
-android.enableAapt2=
-RELEASE_API_KEY=
-DEBUG_API_KEY=
+RELEASE_STORE_PASSWORD=picrelease
+RELEASE_STORE_FILE=release.keystore.jks
+RELEASE_KEY_ALIAS=releaseKey
+RELEASE_KEY_PASSWORD=picrelease
+android.enableAapt2=false
+RELEASE_API_KEY=AIzaSyC2QWpAny5vmZvYvh8--YSlNyWT1u--BnA
+DEBUG_API_KEY=AIzaSyC2QWpAny5vmZvYvh8--YSlNyWT1u--BnA
