--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,13 +40,13 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.activities.CategorySearchResultActivity" android:configChanges="orientation">
+        <activity android:name=".views.activities.CategorySearchResultActivity">
             <intent-filter>
                 <action android:name="com.nds.pmc.action.search_category" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.activities.CategorySearchDetailActivity" android:configChanges="orientation">
+        <activity android:name=".views.activities.CategorySearchDetailActivity">
             <intent-filter>
                 <action android:name="com.nds.pmc.action.search_result_details" />
                 <category android:name="android.intent.category.DEFAULT" />
